--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				<input onkeyup="filterManager(this)" id="FilterSearch" placeholder="Find in library">
 			</div>
 			<div id="SearchUI">
-				<div class="sss" style="display: block;top:0px;margin-top:0px;background:#333">
+				<div class="sss" style="display: block;top:0px;margin-top:0px;">
 					All Songs Search Results <span style="opacity:0.3">clear search to close</span>
  
 				</div>
@@ -207,8 +207,9 @@
 			<img class="searchResultImg" src="">
 			<div class="searchResultCtx">
 				<div class="searchResultTitle">Title</div>
-				<button class="searchResultDL" onclick="callDownload(this)">Download</button>
 				<div class="searchResultMeta"></div>
+				<button class="searchResultDL" onclick="callDownload(this)">Download</button>
+			
 			</div>
 		</div>
 		<div class="DownloadItem" id="tmp_dl">
