--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			</div>
 		</div>
 
-	<div id="MainUI"  >
+	<div id="MainUI" >
 		<div id="HomeView" class="view activeView">
 			<div style="opacity:0.3;padding: 4px;">Downable v3 by captainhandsome</div>
 			<div id="NoNetworkError" style="display: none;">No network access.</div>
@@ -145,7 +145,7 @@
 	</div>
 	<div id="FullView">
 		<div id="MoreFV">
-			Options
+			<button class="list" onclick="showLyrics()">Lyrics</button>
 		</div>
 		<div id="FVHeads">
 			<button onclick="window.history.back()" class="aps material-icons">close</button>
@@ -157,7 +157,10 @@
 		</div>
 		<img src="noart.png" id="AlbumArt">
 		<div id="FVControls"> 
-			
+			<div id="FVLyricsView">
+				<button id="FVLyricsHideMobile" onclick="closeLyricsView()">Close</button>
+				<div id="FVLyricsContainer">Lyrics show up here.</div>
+			</div>
 			<div style="padding:16px;" class="SizeControl">
 				<div id="SongTitle">No Song Playing</div>
 				<div id="FullRangeBar">
