--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 	<div id="MainUI" >
 		<div id="HomeView" class="view activeView">
-			<div style="opacity:0.3;padding: 4px;">Downable v3.61 by captainhandsome</div>
+			<div style="opacity:0.3;padding: 4px;">Downable v3.61b by captainhandsome</div>
 			<div id="NoNetworkError" style="display: none;">No network access.</div>
 			<center id="MainDLUI">
 				
