--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
 </head>
 
 <body onload="do_Load();">
+	<input type="file"  id="restoreuploader" style="display:none"/> 
+	<div id="LOADER">
+		<div>
+			<div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
+			<div id="LoaderState">Loading...</div>
+		</div>
+		
+	</div>
 	<canvas id="BackdropCanvas" style="display: none;width:100%;height:100%;z-index:-1;position:fixed;left:0;top:0;"></canvas>
 	<!--[if IE]>
 		<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
@@ -45,11 +53,14 @@
 			<div id="NavRange">
 				<div id="NavRangeMeter"></div>
 			</div>
+			<div class="hideMob" style="font-weight: 300;font-size:36px;margin:12px 16px;margin-bottom:0px;">Downable <span style="opacity:0.6">v3.62</span></div>
+			<a class="hideMob" target="_blank" href="https://capthndsme.xyz" style="text-decoration:none;color:white;font-weight: 300; opacity: 0.6; margin: 0px 16px;display:block;">by @capthndsme</a>
 			<img src="noart.png" id="Albart" class="hideMob">
 			<div id="PlayBar">
 				<button onclick="playBack()" class="hideMob material-icons aps">skip_previous</button>
 				<button id="BarPlay" onclick="togglePause()" class="material-icons aps">pause</button>
 				<button onclick="playBack()" class="hideMob material-icons aps">skip_next</button>
+				
 				<a data-navigo href="playOpen" id="nowPlaying">Nothing playing.</a>
 			</div> 
 			<div id="NavInr">
@@ -71,7 +82,7 @@
 
 	<div id="MainUI" >
 		<div id="HomeView" class="view activeView">
-			<div style="opacity:0.3;padding: 4px;">Downable v3.61b by captainhandsome</div>
+			<div style="opacity:0.3;padding: 4px;">Downable v3.62 by captainhandsome</div>
 			<div id="NoNetworkError" style="display: none;">No network access.</div>
 			<center id="MainDLUI">
 				
@@ -219,6 +230,8 @@
 			<br/>
 			<input type="checkbox" id="Theme" name="Theme-tgl" class="switch-input">
 			<label for="Theme" class="switch-label">Theme <span class="toggle--on">Light</span><span class="toggle--off">Dark</span></label><br/>
+			<button onclick="backupGenerate()">Download backup</button>
+			<button onclick="document.getElementById('restoreuploader').click()">Restore backup</button> 
 		</div>
 		
 	</div>
