--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<div id="NavRange">
 				<div id="NavRangeMeter"></div>
 			</div>
-			<div class="hideMob" style="font-weight: 300;font-size:36px;margin:12px 16px;margin-bottom:0px;">Downable <span style="opacity:0.6">v3.62</span></div>
+			<div class="hideMob" style="font-weight: 300;font-size:36px;margin:12px 16px;margin-bottom:0px;">Downable <span style="opacity:0.6">v3.62b</span></div>
 			<a class="hideMob" target="_blank" href="https://capthndsme.xyz" style="text-decoration:none;color:white;font-weight: 300; opacity: 0.6; margin: 0px 16px;display:block;">by @capthndsme</a>
 			<img src="noart.png" id="Albart" class="hideMob">
 			<div id="PlayBar">
@@ -82,7 +82,7 @@
 
 	<div id="MainUI" >
 		<div id="HomeView" class="view activeView">
-			<div style="opacity:0.3;padding: 4px;">Downable v3.62 by captainhandsome</div>
+			<div style="opacity:0.3;padding: 4px;">Downable v3.62b by captainhandsome</div>
 			<div id="NoNetworkError" style="display: none;">No network access.</div>
 			<center id="MainDLUI">
 				
@@ -262,8 +262,7 @@
         </div>
 	</div>
 	<script src="js/vendor/modernizr-3.8.0.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
+	 
 	<script src="js/plugins.js"></script>
 	<script src="js/color-thief.umd.js"></script>
 	<script src="js/Base64.js"></script>
