Add updater notification

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<div id="NavRange">
 				<div id="NavRangeMeter"></div>
 			</div>
-			<div class="hideMob" style="font-weight: 300;font-size:36px;margin:12px 16px;margin-bottom:0px;">Downable <span style="opacity:0.6">v3.62b</span></div>
+			<div class="hideMob" style="font-weight: 300;font-size:36px;margin:12px 16px;margin-bottom:0px;">Downable <span style="opacity:0.6">v3.62c</span></div>
 			<a class="hideMob" target="_blank" href="https://capthndsme.xyz" style="text-decoration:none;color:white;font-weight: 300; opacity: 0.6; margin: 0px 16px;display:block;">by @capthndsme</a>
 			<img src="noart.png" id="Albart" class="hideMob">
 			<div id="PlayBar">
@@ -82,7 +82,7 @@
 
 	<div id="MainUI" >
 		<div id="HomeView" class="view activeView">
-			<div style="opacity:0.3;padding: 4px;">Downable v3.62b by captainhandsome</div>
+			<div style="opacity:0.3;padding: 4px;">Downable v3.62c by captainhandsome</div>
 			<div id="NoNetworkError" style="display: none;">No network access.</div>
 			<center id="MainDLUI">
 				
